--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -12,7 +12,7 @@ jobs:
       - uses:  actions/cache/save@v4
         with: 
           key: ${{ github.run_id }}
-          path: dist
+          path: build
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/cache/restore@v4
         with: 
           key: ${{ github.run_id }}
-          path: dist
+          path: build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
