--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+		"preview": "npm run build && vite preview",
 		"deploy": "npm run build && firebase deploy --only hosting:io-svelte"
 	},
 	"devDependencies": {
