--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -14,7 +14,7 @@ jobs:
           key: ${{ github.run_id }}
           path: build
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
